--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,7 @@
 # prettier messes up the jekyll tags in head
 _includes/head.html
+# prettier messes up the quadrant matrix formatting
+_includes/quadrant-matrix.html
 zz-chop-logs/**
 
 # Prettier reformats my python json
