chore(config): ignore published-chop-logs directory in Prettier, Typos, and Biome
New published-chop-logs directory needs exclusion from linting, formatting, and typo checking to avoid unnecessary processing of generated or external logs.

Added "published-chop-logs/**" to ignore patterns in .prettierignore, extend-exclude in .typos.toml, and ignore array in biome.json.

Verified by running Prettier, Typos, and Biome checks; the directory is now skipped without errors.

commit message generated by grok-4-fast in 3.68 seconds

---

chore(ignore): add published-chop-logs to ignore lists

The newly introduced `published-chop-logs` directory contains generated log files that should not be processed by Prettier, Typos, or Biome. Without ignoring this path, these tools waste resources scanning irrelevant files and may produce false positives.

- Updated `.prettierignore` to exclude `published-chop-logs/**`.
- Added `published-chop-logs/**` to the `extend-exclude` list in `.typos.toml`.
- Included `published-chop-logs/**` in the `ignore` array of `biome.json`.

These changes ensure all three tooling configurations consistently ignore the new log directory.

* Ran `prettier --check .` – no formatting errors reported for ignored paths.
* Executed `typos` – no typo warnings from the new directory.
* Ran `biome lint` – linting passed without processing `published-chop-logs`.

Align ignore configurations across development tools to prevent unnecessary processing of generated log files.

commit message generated by openai/gpt-oss-120b in 1.17 seconds

---

chore: ignore published-chop-logs in formatters/linters

The new published-chop-logs directory was not being excluded from Prettier, typos, or Biome, causing unnecessary processing and potential false positives.

Add published-chop-logs to the ignore lists of .prettierignore, .typos.toml, and biome.json so these tools skip the directory.

Verified that running each tool no longer scans files inside published-chop-logs.

commit

--- a/.typos.toml
+++ b/.typos.toml
@@ -125,6 +125,7 @@ extend-exclude = [
     "chop-logs/**",
     "zz-chop-logs/**",
     "cursor-logs/**",
+    "published-chop-logs/**",
     "assets/models/**",
     "images/*.excalidraw",
     "old_blog/**",
